servicemesh/traffic-management/request-timeout.yaml

apiVersion: v1
kind: Service
metadata:
  name: slow-http
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: slow-http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: slow-http-v1
  labels:
    app: slow-http
    version: v1
spec:
  selector:
    matchLabels:
      app: slow-http
  template:
    metadata:
      labels:
        app: slow-http
        version: v1
    spec:
      containers:
      - image: kishanb/slow-http:1.0.1
        name: slow-http
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 200M
          requests:
            cpu: 10m
            memory: 50M
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - name: 'slow-http'
    match:
    - uri:
        prefix: /slow-http
    rewrite:
      uri: "/"
    route:
    - destination:
        host: slow-http
        port:
          number: 8080
    timeout: 0.5s
